# ai-spike-llm-validation

./: .gitignore  README.md  experiment-writeup.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: validation-checkpoint.ipynb
output/: correctness_bert_score.csv  correctness_deepeval.csv  correctness_many_prompts.csv  correctness_temperature.csv  correctness_topP.csv  qanda_responses.csv  summaries.csv  summaries_bert_score.csv  summaries_deepeval.csv  summarised.csv
pythonproject.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
