[project]
name = "pythonproject"
version = "0.1.0"
description = "Python project to validate LLMs"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.21.0",
    "bert-score>=0.3.13",
    "boto3",
    "deepeval",
    "fastparquet>=2025.12.0",
    "ipykernel",
    "ipywidgets",
    "jupyter>=1.0.0",
    "llm-client>=0.8.0",
    "llmlingua>=0.2.0",
    "nltk>=3.8.0",
    "numpy",
    "openai>=1.0.0",
    "opendatasets",
    "python-dotenv>=1.0.0",
    "pyarrow>=23.0.0",
    "tiktoken>=0.5.0"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "ipykernel>=7.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["data*", "output*"]